--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <!-- main css -->
     <link rel="stylesheet" href="./src/styles/global.css" />
-    <title>moviesnack</title>
+    <title>moviesnacks</title>
   </head>
   <body>
     <div id="root"></div>
